// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SPage/Users/Featured/Companies Snapshot > renders when user is logged in with featured companies correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <div>
          <!-- Featured Companies List -->
          <div class="mb-12">
            <h2 class="
              font-bold
              mb-6
              text-2xl
            ">
              Your Featured Companies
            </h2>
            <div class="
              gap-4
              grid
              grid-cols-1
              lg:grid-cols-3
              md:grid-cols-2
            ">
              <div class="
                bg-default
                divide-default
                divide-y
                hover:shadow-lg
                ring
                ring-default
                rounded-lg
                transition-all
              ">
                <div class="
                  p-4
                  sm:px-6
                ">
                  <div class="
                    flex
                    items-center
                    justify-between
                  ">
                    <h3 class="
                      font-semibold
                      text-lg
                    ">
                      Example
                    </h3>
                    <span class="
                      bg-success/10
                      font-medium
                      gap-1
                      inline-flex
                      items-center
                      px-2
                      py-1
                      rounded-md
                      text-success
                      text-xs
                    ">
                      <!-- v-if -->
                      Active
                      <!-- v-if -->
                    </span>
                  </div>
                </div>
                <div class="
                  p-4
                  sm:p-6
                ">
                  <div class="space-y-2">
                    <a
                      class="
                        hover:underline
                        text-gray-600
                      "
                      href="/products/best/tech/"
                    > Category: Tech</a>
                    <p class="text-gray-600">
                      Placement: 1
                    </p>
                    <p class="
                      text-gray-500
                      text-sm
                    ">
                      Created: 2025-01-01
                    </p>
                  </div>
                </div>
                <div class="
                  p-4
                  sm:px-6
                ">
                  <a
                    class="
                      font-medium
                      hover:underline
                      text-primary-600
                    "
                    href="/products/example.com/reviews/"
                  > View Company → </a>
                </div>
              </div>
            </div>
          </div>
          <!-- Feature a Company Form -->
          <div class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          ">
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                items-center
                justify-between
              ">
                <h2 class="
                  font-semibold
                  text-xl
                ">
                  Get Featured
                </h2>
                <span class="
                  bg-info/10
                  font-medium
                  gap-1
                  inline-flex
                  items-center
                  px-2
                  py-1
                  rounded-md
                  text-info
                  text-xs
                ">
                  <!-- v-if -->
                  Promote Your Company
                  <!-- v-if -->
                </span>
              </div>
            </div>
            <div class="
              p-4
              sm:p-6
            ">
              <div class="
                py-4
                space-y-5
              ">
                <p class="
                  dark:text-gray-400
                  mb-4
                  text-gray-500
                ">
                  Premium placement on pages that drive leads for your brand.
                </p>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-0"
                      >
                        Category
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      dir="ltr"
                      id="v-0-0-0"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby="v-0-0-0-help"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        placeholder="Select a category"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-state="closed"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <div class="
                      mt-2
                      text-muted
                    ">
                      Select a category for your featured listing
                    </div>
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-1"
                      >
                        Company
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Select company"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-2"
                      >
                        Position
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-2"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Position you want your company featured in"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </div>
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                justify-end
              ">
                <button
                  class="
                    aria-disabled:bg-primary
                    aria-disabled:cursor-not-allowed
                    aria-disabled:opacity-75
                    bg-primary
                    disabled:bg-primary
                    disabled:cursor-not-allowed
                    disabled:opacity-75
                    focus-visible:outline-2
                    focus-visible:outline-offset-2
                    focus-visible:outline-primary
                    font-medium
                    gap-2
                    hover:bg-primary/75
                    inline-flex
                    items-center
                    px-3
                    py-2
                    rounded-md
                    text-base
                    text-inverted
                    transition-colors
                  "
                  disabled=""
                  type="button"
                >
                  <!-- v-if -->
                  Submit
                  <!-- v-if -->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`SPage/Users/Featured/Companies Snapshot > renders when user is logged in with no featured companies correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <div>
          <!-- Featured Companies List -->
          <!-- v-if -->
          <!-- Feature a Company Form -->
          <div class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          ">
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                items-center
                justify-between
              ">
                <h2 class="
                  font-semibold
                  text-xl
                ">
                  Get Featured
                </h2>
                <span class="
                  bg-info/10
                  font-medium
                  gap-1
                  inline-flex
                  items-center
                  px-2
                  py-1
                  rounded-md
                  text-info
                  text-xs
                ">
                  <!-- v-if -->
                  Promote Your Company
                  <!-- v-if -->
                </span>
              </div>
            </div>
            <div class="
              p-4
              sm:p-6
            ">
              <div class="
                py-4
                space-y-5
              ">
                <p class="
                  dark:text-gray-400
                  mb-4
                  text-gray-500
                ">
                  Premium placement on pages that drive leads for your brand.
                </p>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-0"
                      >
                        Category
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      dir="ltr"
                      id="v-0-0-0"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby="v-0-0-0-help"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        placeholder="Select a category"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-state="closed"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <div class="
                      mt-2
                      text-muted
                    ">
                      Select a category for your featured listing
                    </div>
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-1"
                      >
                        Company
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Select company"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-2"
                      >
                        Position
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-2"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Position you want your company featured in"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </div>
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                justify-end
              ">
                <button
                  class="
                    aria-disabled:bg-primary
                    aria-disabled:cursor-not-allowed
                    aria-disabled:opacity-75
                    bg-primary
                    disabled:bg-primary
                    disabled:cursor-not-allowed
                    disabled:opacity-75
                    focus-visible:outline-2
                    focus-visible:outline-offset-2
                    focus-visible:outline-primary
                    font-medium
                    gap-2
                    hover:bg-primary/75
                    inline-flex
                    items-center
                    px-3
                    py-2
                    rounded-md
                    text-base
                    text-inverted
                    transition-colors
                  "
                  disabled=""
                  type="button"
                >
                  <!-- v-if -->
                  Submit
                  <!-- v-if -->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`SPage/Users/Featured/Companies Snapshot > renders when user is not logged in correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <!-- Not Logged In View -->
        <div>
          <div class="
            bg-default
            divide-default
            divide-y
            py-8
            ring
            ring-default
            rounded-lg
            text-center
          ">
            <!-- v-if -->
            <div class="
              p-4
              sm:p-6
            ">
              <h2 class="
                font-semibold
                mb-4
                text-xl
              ">
                Get Featured
              </h2>
              <p class="
                dark:text-gray-400
                mb-6
                text-gray-500
              ">
                Login to feature your company on our platform for increased visibility.
              </p>
              <a
                class="
                  aria-disabled:bg-primary
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-primary
                  disabled:bg-primary
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:outline-2
                  focus-visible:outline-offset-2
                  focus-visible:outline-primary
                  font-medium
                  gap-1.5
                  hover:bg-primary/75
                  inline-flex
                  items-center
                  px-2.5
                  py-1.5
                  rounded-md
                  text-inverted
                  text-sm
                  transition-colors
                "
                href="/login"
              >
                
              <!-- v-if --> Login to Continue
                
              <!-- v-if -->
              </a>
            </div>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`sPage/Users/Featured/Companies Snapshot > renders when user is logged in with featured companies correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <div>
          <!-- Featured Companies List -->
          <div class="mb-12">
            <h2 class="
              font-bold
              mb-6
              text-2xl
            ">
              Your Featured Companies
            </h2>
            <div class="
              gap-4
              grid
              grid-cols-1
              lg:grid-cols-3
              md:grid-cols-2
            ">
              <div class="
                bg-default
                divide-default
                divide-y
                hover:shadow-lg
                ring
                ring-default
                rounded-lg
                transition-all
              ">
                <div class="
                  p-4
                  sm:px-6
                ">
                  <div class="
                    flex
                    items-center
                    justify-between
                  ">
                    <h3 class="
                      font-semibold
                      text-lg
                    ">
                      Example
                    </h3>
                    <span class="
                      bg-success/10
                      font-medium
                      gap-1
                      inline-flex
                      items-center
                      px-2
                      py-1
                      rounded-md
                      text-success
                      text-xs
                    ">
                      <!-- v-if -->
                      Active
                      <!-- v-if -->
                    </span>
                  </div>
                </div>
                <div class="
                  p-4
                  sm:p-6
                ">
                  <div class="space-y-2">
                    <a
                      class="
                        hover:underline
                        text-gray-600
                      "
                      href="/products/best/tech/"
                    > Category: Tech</a>
                    <p class="text-gray-600">
                      Placement: 1
                    </p>
                    <p class="
                      text-gray-500
                      text-sm
                    ">
                      Created: 2025-01-01
                    </p>
                  </div>
                </div>
                <div class="
                  p-4
                  sm:px-6
                ">
                  <a
                    class="
                      font-medium
                      hover:underline
                      text-primary-600
                    "
                    href="/products/example.com/reviews/"
                  > View Company → </a>
                </div>
              </div>
            </div>
          </div>
          <!-- Feature a Company Form -->
          <div class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          ">
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                items-center
                justify-between
              ">
                <h2 class="
                  font-semibold
                  text-xl
                ">
                  Get Featured
                </h2>
                <span class="
                  bg-info/10
                  font-medium
                  gap-1
                  inline-flex
                  items-center
                  px-2
                  py-1
                  rounded-md
                  text-info
                  text-xs
                ">
                  <!-- v-if -->
                  Promote Your Company
                  <!-- v-if -->
                </span>
              </div>
            </div>
            <div class="
              p-4
              sm:p-6
            ">
              <div class="
                py-4
                space-y-5
              ">
                <p class="
                  dark:text-gray-400
                  mb-4
                  text-gray-500
                ">
                  Premium placement on pages that drive leads for your brand.
                </p>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-0"
                      >
                        Category
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      dir="ltr"
                      id="v-0-0-0"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby="v-0-0-0-help"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        placeholder="Select a category"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-state="closed"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <div class="
                      mt-2
                      text-muted
                    ">
                      Select a category for your featured listing
                    </div>
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-1"
                      >
                        Company
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Select company"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-2"
                      >
                        Position
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-2"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Position you want your company featured in"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </div>
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                justify-end
              ">
                <button
                  class="
                    aria-disabled:bg-primary
                    aria-disabled:cursor-not-allowed
                    aria-disabled:opacity-75
                    bg-primary
                    disabled:bg-primary
                    disabled:cursor-not-allowed
                    disabled:opacity-75
                    focus-visible:outline-2
                    focus-visible:outline-offset-2
                    focus-visible:outline-primary
                    font-medium
                    gap-2
                    hover:bg-primary/75
                    inline-flex
                    items-center
                    px-3
                    py-2
                    rounded-md
                    text-base
                    text-inverted
                    transition-colors
                  "
                  disabled=""
                  type="button"
                >
                  <!-- v-if -->
                  Submit
                  <!-- v-if -->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`sPage/Users/Featured/Companies Snapshot > renders when user is logged in with no featured companies correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <div>
          <!-- Featured Companies List -->
          <!-- v-if -->
          <!-- Feature a Company Form -->
          <div class="
            bg-default
            divide-default
            divide-y
            ring
            ring-default
            rounded-lg
          ">
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                items-center
                justify-between
              ">
                <h2 class="
                  font-semibold
                  text-xl
                ">
                  Get Featured
                </h2>
                <span class="
                  bg-info/10
                  font-medium
                  gap-1
                  inline-flex
                  items-center
                  px-2
                  py-1
                  rounded-md
                  text-info
                  text-xs
                ">
                  <!-- v-if -->
                  Promote Your Company
                  <!-- v-if -->
                </span>
              </div>
            </div>
            <div class="
              p-4
              sm:p-6
            ">
              <div class="
                py-4
                space-y-5
              ">
                <p class="
                  dark:text-gray-400
                  mb-4
                  text-gray-500
                ">
                  Premium placement on pages that drive leads for your brand.
                </p>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-0"
                      >
                        Category
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      dir="ltr"
                      id="v-0-0-0"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby="v-0-0-0-help"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        placeholder="Select a category"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-state="closed"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <div class="
                      mt-2
                      text-muted
                    ">
                      Select a category for your featured listing
                    </div>
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-1"
                      >
                        Company
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Select company"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
                <div class="
                  text-sm
                  w-full
                ">
                  <div class="">
                    <div class="
                      content-center
                      flex
                      items-center
                      justify-between
                    ">
                      <label
                        class="
                          block
                          font-medium
                          text-default
                        "
                        for="v-0-0-2"
                      >
                        Position
                      </label>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                  </div>
                  <div class="
                    mt-1
                    relative
                  ">
                    <!---->
                    <div
                      class="
                        inline-flex
                        items-center
                        relative
                        w-full
                      "
                      data-disabled=""
                      dir="ltr"
                      id="v-0-0-2"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls=""
                        aria-describedby=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocomplete="false"
                        class="
                          bg-default
                          border-0
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          focus-visible:ring-2
                          focus-visible:ring-inset
                          focus-visible:ring-primary
                          focus:outline-none
                          gap-1.5
                          pe-9
                          placeholder:text-dimmed
                          px-2.5
                          py-1.5
                          ring
                          ring-accented
                          ring-inset
                          rounded-md
                          text-highlighted
                          text-sm
                          transition-colors
                          w-full
                        "
                        data-disabled=""
                        disabled=""
                        placeholder="Position you want your company featured in"
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <!-- v-if -->
                      <button
                        aria-controls=""
                        aria-disabled="true"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Show popup"
                        class="
                          absolute
                          disabled:cursor-not-allowed
                          disabled:opacity-75
                          end-0
                          flex
                          group
                          inset-y-0
                          items-center
                          pe-2.5
                        "
                        data-disabled=""
                        data-state="closed"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="
                            i-lucide:chevron-down
                            iconify
                            shrink-0
                            size-5
                            text-dimmed
                          "
                        ></span>
                      </button>
                      <!-- teleport start -->
                      <!-- teleport end -->
                      <!---->
                    </div>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </div>
            <div class="
              p-4
              sm:px-6
            ">
              <div class="
                flex
                justify-end
              ">
                <button
                  class="
                    aria-disabled:bg-primary
                    aria-disabled:cursor-not-allowed
                    aria-disabled:opacity-75
                    bg-primary
                    disabled:bg-primary
                    disabled:cursor-not-allowed
                    disabled:opacity-75
                    focus-visible:outline-2
                    focus-visible:outline-offset-2
                    focus-visible:outline-primary
                    font-medium
                    gap-2
                    hover:bg-primary/75
                    inline-flex
                    items-center
                    px-3
                    py-2
                    rounded-md
                    text-base
                    text-inverted
                    transition-colors
                  "
                  disabled=""
                  type="button"
                >
                  <!-- v-if -->
                  Submit
                  <!-- v-if -->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`sPage/Users/Featured/Companies Snapshot > renders when user is not logged in correctly 1`] = `
<div class="
  flex
  flex-col
  lg:gap-10
  lg:grid
  lg:grid-cols-10
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="min-h-[calc(100vh-var(--ui-header-height))]">
      <div class="
        lg:px-8
        max-w-3xl
        mt-16
        mx-auto
        px-4
        sm:px-6
        w-full
      ">
        <!-- Not Logged In View -->
        <div>
          <div class="
            bg-default
            divide-default
            divide-y
            py-8
            ring
            ring-default
            rounded-lg
            text-center
          ">
            <!-- v-if -->
            <div class="
              p-4
              sm:p-6
            ">
              <h2 class="
                font-semibold
                mb-4
                text-xl
              ">
                Get Featured
              </h2>
              <p class="
                dark:text-gray-400
                mb-6
                text-gray-500
              ">
                Login to feature your company on our platform for increased visibility.
              </p>
              <a
                class="
                  aria-disabled:bg-primary
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-primary
                  disabled:bg-primary
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:outline-2
                  focus-visible:outline-offset-2
                  focus-visible:outline-primary
                  font-medium
                  gap-1.5
                  hover:bg-primary/75
                  inline-flex
                  items-center
                  px-2.5
                  py-1.5
                  rounded-md
                  text-inverted
                  text-sm
                  transition-colors
                "
                href="/login"
              >
                
              <!-- v-if --> Login to Continue
                
              <!-- v-if -->
              </a>
            </div>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;
